bin/testsuite/tests/compiler/src/errors/compiler2700.swg
#global testerror "Err0118"

#[Swag.Mixin]
func toto()
{
    toto()
}

//#[Swag.PrintBc]
#test
{
    toto()
}
